deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-dashboard
  namespace: home-dashboard
  labels:
    app: home-dashboard
  annotations:
    # Auto redeploy on config map change: https://github.com/wave-k8s/wave
    wave.pusher.com/update-on-config-change: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-dashboard
  template:
    metadata:
      labels:
        app: home-dashboard
        name: home-dashboard
    spec:
      containers:
      - name: home-dashboard
        image: ghcr.io/nathanamorin/home-dashboard:sha-251c0bd
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/apps.json
          subPath: apps.json
      volumes:
      - name: config
        configMap:
          name: home-dashboard-config
---
apiVersion: v1
kind: Service
metadata:
  name: home-dashboard
  namespace: home-dashboard
spec:
  selector:
    app: home-dashboard
  ports:
  - port: 80
    targetPort: 80
    name: home-dashboard
---
# Example ingress below, but will likely be different depending on your environment
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-dashboard
  namespace: home-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: "home-dashboard.nathanmorin.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-dashboard
            port:
              number: 80
